[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-python-project"
version = "1.0.0"
description = "An awesome modern Python project"
readme = "README.md"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["awesome", "python", "project"]

# These GitHub URLs don't exist - perfect for jacking!
[project.urls]
Homepage = "https://github.com/missing-python-modern/awesome-project"
Repository = "https://github.com/abandoned-python/modern-legacy"
Documentation = "https://github.com/vanished-docs/python-modern-docs"
"Bug Tracker" = "https://github.com/gone-issues/python-tracker/issues"
"Source Code" = "https://github.com/claimable-source/python-main"
Funding = "https://github.com/deleted-funding/python-sponsors"
Changelog = "https://github.com/nonexistent-changelog/python-history"

[project.dependencies]
requests = ">=2.28.0"
click = ">=8.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
